Mobile - Spacing Issues

--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,7 @@ h3 {
         padding-bottom: 15px;
     }
     .course p{
-        
+        margin-bottom: 30px;
         font-size: 14px;
     }
 } 
